<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/game_background"
    android:padding="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_participant_name"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input_box_background"
        android:inputType="text"
        android:maxLines="1"
        />

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gradient"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_gradient"
            android:padding="10dp" />
    </LinearLayout>
</LinearLayout>
